# MGSC-697-075-2026

Assignment 1/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
Assignment 1/data/fixtures/: courses.json  policies.json  prerequisites.json  student_profile.json
Assignment 1/evals/: __init__.py  eval_cases.json  run_evals.py
Assignment 1/evals/results/: eval_results.json
Assignment 1/evidence/run_transcripts/: 01_normal_ai_plan.md  02_missing_prerequisite.md  03_capstone_approval.md  04_credit_overload.md  05_unknown_course.md  06_ambiguous_next_course.md  20260602_183348_offline.md  20260602_183712_offline.md  20260603_174413_offline.md  20260603_175712_offline.md  20260603_180914_offline.md  20260603_222009_sdk.md  20260603_222608_sdk.md  20260603_222830_sdk.md
Assignment 1/evidence/screenshots/: README.md
Assignment 1/evidence/traces/: offline_eval_trace.json
Assignment 1/src/advising_agent/: __init__.py  advisor.py  agent.py  fixtures.py  guardrails.py  models.py  run_demo.py  tools.py
Assignment 1/tests/: test_evals.py  test_fixtures.py  test_guardrails.py  test_tools.py
assignment 2/: .gitignore  README.md  requirements.txt
assignment 2/docs/: business_memo.md  results_summary.md  (+1 more)
assignment 3/: .gitignore  README.md  pyproject.toml
assignment 3/docs/: architecture.md  communication_contract.md  evaluation_safety.md
assignment 3/src/disaster_mas/: __init__.py  agents.py  blackboard.py  contracts.py  scenarios.py  simulate.py  simulation.py
assignment 3/tests/: test_agents.py  test_contracts.py  test_simulation.py
(+14 files in other folders)
