[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcgill-course-advising-agent"
version = "0.1.0"
description = "Single-agent McGill-style course advising assignment project using the OpenAI Agents SDK."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "openai-agents>=0.3.0",
  "pydantic>=2.7",
  "python-dotenv>=1.0",
  "rich>=13.7"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0"
]

[project.scripts]
advising-demo = "advising_agent.run_demo:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
