[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "disaster-mas"
version = "0.1.0"
description = "Mocked multi-agent disaster response simulation for MGSC 697 Assignment 3"
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
